minor syntax fixes mainly related to the fMRI term

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2020-07-20 14:41:42 +0200 
+%% Created for Wittkuhn, Lennart at 2020-07-20 14:46:17 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,7 +12,7 @@
 	Abstract = {Over the past decade, pattern classification methods have become widespread in functional magnetic resonance imaging (fMRI). These methods, typically referred to as multivoxel pattern analysis (MVPA) or multivariate pattern decoding, are now applied to a wide range of neuroscientific questions. There has been particular interest in applying these approaches, e.g., in detecting deception or for diagnostic purposes. In this review, we will focus on what can be achieved by pattern classification analyses of fMRI data; the strengths and weaknesses of this approach; and the biological processes giving rise to the signals measured by this method. Finally, we will discuss how these multivariate approaches are starting to be applied to the analysis of anatomical magnetic resonance imaging (MRI) and magnetoencephalographic (MEG) data.},
 	Author = {Schwarzkopf, Dietrich Samuel and Rees, Geraint},
 	Date-Added = {2020-07-20 14:24:53 +0200},
-	Date-Modified = {2020-07-20 14:25:55 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1002/wcs.141},
 	Issn = {1939-5078},
 	Journal = {Wiley Interdisciplinary Reviews: Cognitive Science},
@@ -30,7 +30,7 @@
 	Abstract = {Various arguments have been proposed for or against sub-voxel sensitivity or hyperacuity in functional magnetic resonance imaging (fMRI) at standard resolution. Sub-voxel sensitivity might exist, but nevertheless the performance of multi-voxel fMRI analyses is very likely to be dominated by a larger-scale organization, even if this organization is very weak. Up to now, most arguments are indirect in nature: they do not in themselves proof or contradict sub-voxel sensitivity, but they are suggestive, seem consistent or not with sub-voxel sensitivity, or show that the principle might or might not work. Here the previously proposed smoothing argument against hyperacuity is extended with simulations that include more realistic signal, noise, and analysis properties than any of the simulations presented before. These simulations confirm the relevance of the smoothing approach to find out the scale of the functional maps that underlie the outcome of multi-voxel analyses, at least in relative terms (differences in the scale of different maps). However, image smoothing, like most other arguments in the literature, is an indirect argument, and at the end of the day such arguments are not sufficient to decide the issue on whether and how much sub-voxel maps contribute. A few suggestions are made about the type of evidence that is needed to help us understand the as yet mysterious underpinnings of multi-voxel fMRI analyses.},
 	Author = {{Op de Beeck}, Hans P.},
 	Date-Added = {2020-07-20 13:49:40 +0200},
-	Date-Modified = {2020-07-20 14:41:37 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1016/j.neuroimage.2009.12.072},
 	Issn = {1053-8119},
 	Journal = {NeuroImage},
@@ -38,7 +38,7 @@
 	Number = {2},
 	Pages = {567--571},
 	Publisher = {Elsevier BV},
-	Title = {Probing the mysterious underpinnings of multi-voxel fMRI analyses},
+	Title = {Probing the mysterious underpinnings of multi-voxel {fMRI} analyses},
 	Url = {http://dx.doi.org/10.1016/j.neuroimage.2009.12.072},
 	Volume = {50},
 	Year = {2010},
@@ -48,7 +48,7 @@
 	Abstract = {This work proposes an alternative to simulation-based receiver operating characteristic (ROC) analysis for assessment of fMRI data analysis methodologies. Specifically, we apply the rapidly developing nonparametric prediction, activation, influence, and reproducibility resampling (NPAIRS) framework to obtain cross-validation-based model performance estimates of prediction accuracy and global reproducibility for various degrees of model complexity. We rely on the concept of an analysis chain meta-model in which all parameters of the preprocessing steps along with the final statistical model are treated as estimated model parameters. Our ROC analog, then, consists of plotting prediction vs. reproducibility results as curves of model complexity for competing meta-models. Two theoretical underpinnings are crucial to utilizing this new validation technique. First, we explore the relationship between global signal-to-noise and our reproducibility estimates as derived previously. Second, we submit our model complexity curves in the prediction versus reproducibility space as reflecting classic bias-variance tradeoffs. Among the particular analysis chains considered, we found little impact in performance metrics with alignment, some benefit with temporal detrending, and greatest improvement with spatial smoothing.},
 	Author = {La-Conte, Stephen and Anderson, Jon and Muley, Suraj and Ashe, James and Frutiger, Sally and Rehm, Kelly and Hansen, Lars Kai and Yacoub, Essa and Hu, Xiaoping and Rottenberg, David and et al.},
 	Date-Added = {2020-07-20 13:46:57 +0200},
-	Date-Modified = {2020-07-20 14:15:48 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1006/nimg.2002.1300},
 	Issn = {1053-8119},
 	Journal = {NeuroImage},
@@ -56,7 +56,7 @@
 	Number = {1},
 	Pages = {10--27},
 	Publisher = {Elsevier BV},
-	Title = {The Evaluation of Preprocessing Choices in Single-Subject BOLD fMRI Using NPAIRS Performance Metrics},
+	Title = {The Evaluation of Preprocessing Choices in Single-Subject {BOLD} {fMRI} Using {NPAIRS} Performance Metrics},
 	Url = {http://dx.doi.org/10.1006/nimg.2002.1300},
 	Volume = {18},
 	Year = {2003},
@@ -66,7 +66,7 @@
 	Abstract = {This paper treats support vector machine (SVM) classification applied to block design fMRI, extending our previous work with linear discriminant analysis [LaConte, S., Anderson, J., Muley, S., Ashe, J., Frutiger, S., Rehm, K., Hansen, L.K., Yacoub, E., Hu, X., Rottenberg, D., Strother S., 2003a. The evaluation of preprocessing choices in single-subject BOLD fMRI using NPAIRS performance metrics. NeuroImage 18, 10--27; Strother, S.C., Anderson, J., Hansen, L.K., Kjems, U., Kustra, R., Siditis, J., Frutiger, S., Muley, S., LaConte, S., Rottenberg, D. 2002. The quantitative evaluation of functional neuroimaging experiments: the NPAIRS data analysis framework. NeuroImage 15, 747--771]. We compare SVM to canonical variates analysis (CVA) by examining the relative sensitivity of each method to ten combinations of preprocessing choices consisting of spatial smoothing, temporal detrending, and motion correction. Important to the discussion are the issues of classification performance, model interpretation, and validation in the context of fMRI. As the SVM has many unique properties, we examine the interpretation of support vector models with respect to neuroimaging data. We propose four methods for extracting activation maps from SVM models, and we examine one of these in detail. For both CVA and SVM, we have classified individual time samples of whole brain data, with TRs of roughly 4 s, thirty slices, and nearly 30,000 brain voxels, with no averaging of scans or prior feature selection.},
 	Author = {La Conte, S and Strohter, S and Cherkassky, V and Anderson, J and Hu, X},
 	Date-Added = {2020-07-20 13:43:45 +0200},
-	Date-Modified = {2020-07-20 13:44:47 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1016/j.neuroimage.2005.01.048},
 	Issn = {1053-8119},
 	Journal = {NeuroImage},
@@ -84,7 +84,7 @@
 	Abstract = {The aim of this thesis is to apply a particular category of machine learning and pattern recognition algorithms, namely the kernel methods, to both functional and anatomical magnetic resonance images (MRI). This work specifically focused on supervised learning methods. Both methodological and practical aspects are described in this thesis. Kernel methods have the computational advantage for high dimensional data, therefore they are idea for imaging data. The procedures can be broadly divided into two components: the construction of the kernels and the actual kernel algorithms themselves. Pre-processed functional or anatomical images can be computed into a linear kernel or a non-linear kernel. We introduce both kernel regression and kernel classification algorithms in two main categories: probabilistic methods and non-probabilistic methods. For practical applications, kernel classification methods were applied to decode the cognitive or sensory states of the subject from the fMRI signal and were also applied to discriminate patients with neurological diseases from normal people using anatomical MRI. Kernel regression methods were used to predict the regressors in the design of fMRI experiments, and clinical ratings from the anatomical scans.},
 	Author = {Chu, Chia-Yueh Carlton},
 	Date-Added = {2020-07-20 13:39:15 +0200},
-	Date-Modified = {2020-07-20 13:41:11 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Journal = {UCL (University College London)},
 	School = {UCL (University College London)},
 	Title = {Pattern recognition and machine learning for magnetic resonance images with kernel methods},
@@ -95,7 +95,7 @@
 	Abstract = {Multivoxel pattern analysis of functional magnetic resonance imaging (fMRI) data is continuing to increase in popularity. Like all fMRI analyses, these analyses require extensive data processing and methodological choices, but the impact of these decisions on the final results is not always known. This study explores the impact of four methodological choices on analysis outcomes and introduces the technique of partitioning on random runs for characterizing temporal dependencies and evaluating partitioning methods. The analyses were performed on two fMRI data sets, which were repeatedly analyzed with support vector machines, varying the method of temporal compression, smoothing, voxel-wise detrending, and partitioning into training and testing sets. Smoothing sometimes slightly increased classification accuracy. Partitioning other than on the runs increased classification accuracy, and the random runs technique allowed us to attribute this improvement to the increased amount of training data, rather than to bias. The impact of the temporal compression and detrending methods varied so strongly with data set that general recommendations could not be drawn. These interactions suggest that, rather than searching for a universally superior set of methodological choices, researchers must carefully consider each choice in the context of each experiment.},
 	Author = {Etzel, Joset A. and Valchev, Nikola and Keysers, Christian},
 	Date-Added = {2020-07-20 13:25:36 +0200},
-	Date-Modified = {2020-07-20 13:26:07 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1016/j.neuroimage.2010.08.050},
 	Issn = {1053-8119},
 	Journal = {NeuroImage},
@@ -103,7 +103,7 @@
 	Number = {2},
 	Pages = {1159--1167},
 	Publisher = {Elsevier BV},
-	Title = {The impact of certain methodological choices on multivariate analysis of fMRI data with support vector machines},
+	Title = {The impact of certain methodological choices on multivariate analysis of {fMRI} data with support vector machines},
 	Url = {http://dx.doi.org/10.1016/j.neuroimage.2010.08.050},
 	Volume = {54},
 	Year = {2011},
@@ -113,7 +113,7 @@
 	Abstract = {Although orientation columns are less than a millimeter in width, recent neuroimaging studies indicate that viewed orientations can be decoded from cortical activity patterns sampled at relatively coarse resolutions of several millimeters. One proposal is that these differential signals arise from random spatial irregularities in the columnar map. However, direct support for this hypothesis has yet to be obtained. Here, we used high-field, high-resolution functional magnetic resonance imaging (fMRI) and multivariate pattern analysis to determine the spatial scales at which orientation-selective information can be found in the primary visual cortex (V1) of cats and humans. We applied a multiscale pattern analysis approach in which fine- and coarse-scale signals were first removed by ideal spatial lowpass and highpass filters, and the residual activity patterns then analyzed by linear classifiers. Cat visual cortex, imaged at 0.3125 mm resolution, showed a strong orientation signal at the scale of individual columns. Nonetheless, reliable orientation bias could still be found at spatial scales of several millimeters. In the human visual cortex, imaged at 1 mm resolution, a majority of orientation information was found on scales of millimeters, with small contributions from global spatial biases exceeding ∼1 cm. Our high-resolution imaging results demonstrate a reliable millimeters-scale orientation signal, likely emerging from irregular spatial arrangements of orientation columns and their supporting vasculature. fMRI pattern analysis methods are thus likely to be sensitive to signals originating from other irregular columnar structures elsewhere in the brain.},
 	Author = {Swisher, J. D. and Gatenby, J. C. and Gore, J. C. and Wolfe, B. A. and Moon, C.-H. and Kim, S.-G. and Tong, F.},
 	Date-Added = {2020-07-20 13:22:18 +0200},
-	Date-Modified = {2020-07-20 13:22:46 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1523/jneurosci.4811-09.2010},
 	Issn = {1529-2401},
 	Journal = {Journal of Neuroscience},
@@ -131,7 +131,7 @@
 	Abstract = {We examined how spatial smoothing affects the result of multivariate classification analysis using the linear support vector machine (SVM) for decoding columnar-level organization. It has been suggested that the effect of spatial smoothing on decoding performance is minor because smoothing operation is an invertible data transformation and such invertible transformation does not remove information in multivariate pattern. Our theoretical consideration, however, revealed that generalization score (performance for test samples unused during classifier training) was susceptible to non-uniform scaling of input data; SVM classifier became less sensitive to variability in shrunk dimension. This result indicates that spatial smoothing reduces sensitivity of SVM classifier to high spatial frequency pattern so that the effect of smoothing implies the amount of information distributed in spatial frequencies. We also examined the effect of smoothing in an fMRI experiment of decoding ocular dominance responses. The results of group statistic showed that large smoothing reduced decoding accuracies while the smoothing effect at individual subject were not the same for all subjects. These results suggest that spatial smoothing can have major effect on decoding performance and the informative pattern for columnar level decoding resides in higher frequencies on average across subjects while it may distribute multiple frequencies at individual subject level.},
 	Author = {Misaki, Masaya and Luh, Wen-Ming and Bandettini, Peter A.},
 	Date-Added = {2020-07-20 13:18:27 +0200},
-	Date-Modified = {2020-07-20 13:19:41 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1016/j.jneumeth.2012.11.004},
 	Issn = {0165-0270},
 	Journal = {Journal of Neuroscience Methods},
@@ -140,7 +140,7 @@
 	Number = {2},
 	Pages = {355--361},
 	Publisher = {Elsevier BV},
-	Title = {The effect of spatial smoothing on fMRI decoding of columnar-level organization with linear support vector machine},
+	Title = {The effect of spatial smoothing on {fMRI} decoding of columnar-level organization with linear support vector machine},
 	Url = {http://dx.doi.org/10.1016/j.jneumeth.2012.11.004},
 	Volume = {212},
 	Year = {2013},
@@ -150,7 +150,7 @@
 	Abstract = {The family of neuroimaging analytical techniques known as multivoxel pattern analysis (MVPA) has dramatically increased in popularity over the past decade, particularly in social and affective neuroscience research using functional magnetic resonance imaging (fMRI). MVPA examines patterns of neural responses, rather than analyzing single voxel- or region-based values, as is customary in conventional univariate analyses. Here, we provide a practical introduction to MVPA and its most popular variants (namely, representational similarity analysis (RSA) and decoding analyses, such as classification using machine learning) for social and affective neuroscientists of all levels, particularly those new to such methods. We discuss how MVPA differs from traditional mass-univariate analyses, the benefits MVPA offers to social neuroscientists, experimental design and analysis considerations, step-by-step instructions for how to implement specific analyses in one's own dataset and issues that are currently facing research using MVPA methods.},
 	Author = {Weaverdyck, Miriam E and Lieberman, Matthew D and Parkinson, Carolyn},
 	Date-Added = {2020-07-20 12:59:43 +0200},
-	Date-Modified = {2020-07-20 13:00:31 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1093/scan/nsaa057},
 	Issn = {1749-5024},
 	Journal = {Social Cognitive and Affective Neuroscience},
@@ -159,7 +159,7 @@
 	Number = {4},
 	Pages = {487--509},
 	Publisher = {Oxford University Press (OUP)},
-	Title = {Tools of the Trade Multivoxel pattern analysis in fMRI: a practical introduction for social and affective neuroscientists},
+	Title = {Tools of the Trade Multivoxel pattern analysis in {fMRI}: a practical introduction for social and affective neuroscientists},
 	Url = {http://dx.doi.org/10.1093/scan/nsaa057},
 	Volume = {15},
 	Year = {2020},
@@ -169,7 +169,7 @@
 	Abstract = {Recently it has been suggested that multivariate analyses of functional magnetic resonance imaging (fMRI) data can detect high spatial frequency components of cortical signals, like sub-millimeter columns. This `hyperacuity' seems to be at odds with the common assumption that the fMRI signal has a low spatial resolution due to the spatial spread of the underlying hemodynamic events. To resolve this apparent contradiction, I checked a very straightforward prediction of the hyperacuity hypothesis: if multivariate analyses are picking up a small-scale functional organization, then it can be expected that smoothing will be detrimental to the ability to decode these fine-scale spatial signals. I tested this prediction using data obtained with two paradigms to which multivariate techniques have been applied previously, including the decoding of grating orientation from the pattern of activity in primary visual cortex. It was found that smoothing does not decrease the sensitivity of multivariate analyses. Further simulations in which the scale of cortical organization was known indicate that this effect of smoothing contradicts the idea that the patterns detected with multivariate techniques reflect a fine-scale spatial organization.},
 	Author = {{Op de Beeck}, Hans P.},
 	Date-Added = {2020-07-20 12:53:32 +0200},
-	Date-Modified = {2020-07-20 14:41:25 +0200},
+	Date-Modified = {2020-07-20 14:46:07 +0200},
 	Doi = {10.1016/j.neuroimage.2009.02.047},
 	Issn = {1053-8119},
 	Journal = {NeuroImage},
