add SOA (stimulus onset asynchony) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -101,6 +101,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{SI}{SI}{supplementary information}
 \newacronym{SEM}{SEM}{standard error of the mean}
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
+\newacronym{SOA}{SOA}{stimulus onset asynchrony}
 \newacronym{SR}{SR}{successor representation}
 \newacronym{S-R}{S-R}{stimulus-response}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
