--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2020-08-14 12:40:02 +0200 
+%% Created for Wittkuhn, Lennart at 2020-08-18 11:17:48 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -772,7 +772,7 @@
 	Abstract = {The family of neuroimaging analytical techniques known as multivoxel pattern analysis (MVPA) has dramatically increased in popularity over the past decade, particularly in social and affective neuroscience research using functional magnetic resonance imaging (fMRI). MVPA examines patterns of neural responses, rather than analyzing single voxel- or region-based values, as is customary in conventional univariate analyses. Here, we provide a practical introduction to MVPA and its most popular variants (namely, representational similarity analysis (RSA) and decoding analyses, such as classification using machine learning) for social and affective neuroscientists of all levels, particularly those new to such methods. We discuss how MVPA differs from traditional mass-univariate analyses, the benefits MVPA offers to social neuroscientists, experimental design and analysis considerations, step-by-step instructions for how to implement specific analyses in one's own dataset and issues that are currently facing research using MVPA methods.},
 	Author = {Weaverdyck, Miriam E and Lieberman, Matthew D and Parkinson, Carolyn},
 	Date-Added = {2020-07-20 12:59:43 +0200},
-	Date-Modified = {2020-07-20 14:46:07 +0200},
+	Date-Modified = {2020-08-18 11:17:43 +0200},
 	Doi = {10.1093/scan/nsaa057},
 	Issn = {1749-5024},
 	Journal = {Social Cognitive and Affective Neuroscience},
@@ -781,7 +781,7 @@
 	Number = {4},
 	Pages = {487--509},
 	Publisher = {Oxford University Press (OUP)},
-	Title = {Tools of the Trade Multivoxel pattern analysis in {fMRI}: a practical introduction for social and affective neuroscientists},
+	Title = {Tools of the Trade Multivoxel pattern analysis in {fMRI}: {A} practical introduction for social and affective neuroscientists},
 	Url = {http://dx.doi.org/10.1093/scan/nsaa057},
 	Volume = {15},
 	Year = {2020},
