add packages for hyphens in URLs

--- a/code/style.sty
+++ b/code/style.sty
@@ -15,6 +15,8 @@
 \usepackage{textcomp,gensymb}
 % change spacing of lines:
 \usepackage[onehalfspacing]{setspace}
+% add hyphens in url (cf. https://www.froos.de/blog/latex-url-zu-lang-umbruch-erzwingen-bindestrich/)
+\usepackage[hyphens]{url}
 % set hyperlinks:
 \usepackage{hyperref}
 \hypersetup{colorlinks=true, linkcolor=blue, citecolor=blue, pdfnewwindow=true, urlcolor=blue}
