add MDP and CLS to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -6,6 +6,7 @@
 \newacronym{BIDS}{BIDS}{brain imaging data structure}
 \newacronym{BOLD}{BOLD}{blood-oxygen-level dependent}
 \newacronym{CA1}{CA1}{cornu ammunis region 1 in the hippocampus}
+\newacronym{CLS}{CLS}{complementary learning systems}
 \newacronym{CSF}{CSF}{cerebrospinal fluid}
 \newacronym{DA}{DA}{dopamine}
 \newacronym{DGPs}{DGPs}{German Psychological Society}
@@ -61,6 +62,7 @@
 \newacronym{LFP}{LFP}{local field potential}
 \newacronym{LME}{LME}{linear mixed effects}
 \newacronym{MB}{MB}{multi-band}
+\newacronym{MDP}{MDP}{Markov decision process}
 \newacronym{MEG}{MEG}{magnetoencephalography}
 \newacronym{ML}{ML}{machine learning}
 \newacronym{MNI}{MNI}{Montreal Neurological Institute}
