--- a/code/bibliography.Rmd
+++ b/code/bibliography.Rmd
@@ -11,14 +11,14 @@ output:
     number_sections: true
     highlight: pygments
     theme: cosmo
-    code_folding: "show"
+    code_folding: "hide"
     df_print: paged
     fig_caption: true
 fig.align: "center"
 email: wittkuhn@mpib-berlin.mpg.de
 ---
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
+```{r, warning=FALSE, message=FALSE, echo=FALSE}
 if (!requireNamespace("pacman")) install.packages("pacman")
 packages_cran <- c("here", "data.table", "DT", "tidyverse")
 pacman::p_load(char = packages_cran)
@@ -44,7 +44,7 @@ DT::datatable(
 
 # Packages
 
-```{r, echo=FALSE}
+```{r}
 sessionInfo()
 ```
 
