add DOI (Digital Object Identifier) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -12,6 +12,7 @@
 \newacronym{DGPs}{DGPs}{German Psychological Society}
 \newacronym{DMN}{DMN}{default mode network}
 \newacronym{DNN}{DNN}{deep neural network}
+\newacronym{DOI}{DOI}{Digital Object Identifier}
 \newacronym{DPIA}{DPIA}{Data Privacy Impact Assessment}
 \newacronym{DQN}{DQN}{Deep Q-Network}
 \newacronym{DUA}{DUA}{Data User Agreement}
