add intriguingly to hypthenation

--- a/code/hyphenation.sty
+++ b/code/hyphenation.sty
@@ -6,3 +6,4 @@
 \hyphenation{mensch-liche mensch-lich mensch-li-cher}
 \hyphenation{ne-ga-tiv ne-ga-ti-ves ne-ga-ti-ver ne-ga-ti-ven ne-ga-ti-vem}
 \hyphenation{Ver-suchs-lei-ter Ver-suchs-lei-ter-in-nen Ver-suchs-lei-tern}
+\hyphenation{in-tri-guing-ly}
