add physical to hyphenation and separate into german and english words

--- a/code/hyphenation.sty
+++ b/code/hyphenation.sty
@@ -1,4 +1,5 @@
 \usepackage{hyphenat}
+% german
 \hyphenation{auf-zeich-nen auf-zeich-net}
 \hyphenation{be-stimm-te be-stimm-ten be-stimm-ter be-stimm-tes}
 \hyphenation{Funk-tions-wei-se}
@@ -6,4 +7,6 @@
 \hyphenation{mensch-liche mensch-lich mensch-li-cher}
 \hyphenation{ne-ga-tiv ne-ga-ti-ves ne-ga-ti-ver ne-ga-ti-ven ne-ga-ti-vem}
 \hyphenation{Ver-suchs-lei-ter Ver-suchs-lei-ter-in-nen Ver-suchs-lei-tern}
+% english
 \hyphenation{in-tri-guing-ly}
+\hyphenation{phys-i-cal phys-i-cal-ly}
