--- a/code/bibliography.Rmd
+++ b/code/bibliography.Rmd
@@ -137,7 +137,7 @@ The maximum number of publications added on a single day were `r max(bib_time$nu
 ggplot(data = bib_time, aes(x = date_added_converted, y = num_added)) +
   geom_line() +
   ggtitle("Number of publications added to the bibliography per day") +
-  ylab(paste0("Number of publications added per day")) +
+  ylab("Number of publications added per day") +
   xlab("Time (months)") +
   theme(panel.background = element_blank()) +
   theme(panel.grid.major = element_blank()) +
